--- a/index.html
+++ b/index.html
@@ -7,18 +7,25 @@
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     </head>
     <body>
-        <h1>Sorriso do Dia</h1>
-        <h3>Todo dia pelo menos um motivo novo pra sorrir!😊️</h3>
-        <ul>
-            <li>
-                3/jun/24
-                <ol>
-                    <li>Quando você rasga o pão de sal (pão francês) no meio e sente aquele cheirinho</li>
-                    <li>Quando você toma uma sopinha quente no frio</li>
-                </ol>
-            </li>
-        </ul>
-        
+        <div class="col-lg-8 mx-auto p-4 py-md-5">
+            <header class="d-flex align-items-center pb-3 mb-5 border-bottom">
+                <a href="/" class="d-flex align-items-center text-body-emphasis text-decoration-none">
+                    <span class="fs-4">Sorriso do Dia</span>
+                </a>
+            </header>
+            <main>
+                <h2 class="text-body-emphasis">
+                    Todo dia um motivo novo pra sorrir! :D
+                </h2>
+                <hr class="col-3 col-md-2 mb-5">
+                <div class="d-flex flex-column gap-3">
+                    <div class="">3/jun/24</div>
+                    <div>Quando você rasga o pão de sal (pão francês) no meio e sente aquele cheirinho</div>
+                    <div>Quando você toma uma sopinha quente no frio</div>
+                </div>
+            </main>
+        </div>
+
         <!-- <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js" integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r" crossorigin="anonymous"></script> -->
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.min.js" integrity="sha384-0pUGZvbkm6XF6gxjEnlmuGrJXVbNuzT9qBBavbLwCsOGabYfZo0T0to5eqruptLy" crossorigin="anonymous"></script>
     </body>
