Add ul and dots

--- a/index.html
+++ b/index.html
@@ -19,9 +19,11 @@
                 </h2>
                 <hr class="col-3 col-md-2 mb-5">
                 <div class="d-flex flex-column gap-3">
-                    <div class="">3/jun/24</div>
-                    <div>Quando você rasga o pão de sal (pão francês) no meio e sente aquele cheirinho</div>
-                    <div>Quando você toma uma sopinha quente no frio</div>
+                    <div>3/jun/24</div>
+                    <ul>
+                        <li>Quando você rasga o pão de sal (pão francês) no meio e sente aquele cheirinho.</li>
+                        <li>Quando você toma uma sopinha quente no frio.</li>
+                    </ul>
                 </div>
             </main>
         </div>
