Add today smiles :)

--- a/index.html
+++ b/index.html
@@ -25,6 +25,14 @@
                         <li>Quando você toma uma sopinha quente no frio.</li>
                     </ul>
                 </div>
+                <div class="d-flex flex-column gap-3">
+                    <div>4/jun/24</div>
+                    <ul>
+                        <li>O cheiro de feijão recém cozido.</li>
+                        <li>O céu roxo e rosa do por do sol de maio.</li>
+                        <li>Conversar com amigos que você não vê há muito tempo.</li>
+                    </ul>
+                </div>
             </main>
         </div>
 
