Remove extra div tag

--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
         
             return html`
                 <div class="d-flex flex-column gap-3">
-                    <div>{day}</div>
+                    <div>{day}
                         <ul>
                             {smiles.map((smile) => <li>{smile}</li>)}
                         </ul>
