Fix div correctly

--- a/index.html
+++ b/index.html
@@ -55,11 +55,10 @@
         
             return html`
                 <div class="d-flex flex-column gap-3">
-                    <div>{day}
-                        <ul>
-                            {smiles.map((smile) => <li>{smile}</li>)}
-                        </ul>
-                    </div>
+                    <div>{day}</div>
+                    <ul>
+                        {smiles.map((smile) => <li>{smile}</li>)}
+                    </ul>
                 </div>
             `;
           }
