start using vite

--- a/index.html
+++ b/index.html
@@ -9,93 +9,7 @@
     <link href="styles.css" rel="stylesheet" />
   </head>
   <body class="theme-a adaptive">
-    <div>
-      <header>
-        <a href="/">
-          <span>Sorriso do Dia</span>
-        </a>
-      </header>
-      <main>
-        <h2>Todo dia um motivo novo pra sorrir! :D</h2>
-        <div id="app"></div>
-        <div>
-          <div>
-            <div>4/jun/24</div>
-            <ul>
-              <li>O cheiro de feijão recém cozido.</li>
-              <li>O céu roxo e rosa do por do sol de maio.</li>
-              <li>Conversar com amigos que você não vê há muito tempo.</li>
-            </ul>
-          </div>
-          <div>
-            <div>3/jun/24</div>
-            <ul>
-              <li>
-                Quando você rasga o pão de sal (pão francês) no meio e sente
-                aquele cheirinho.
-              </li>
-              <li>Quando você toma uma sopinha quente no frio.</li>
-            </ul>
-          </div>
-        </div>
-      </main>
-    </div>
-
-    <script type="importmap">
-      {
-        "imports": {
-          "preact": "https://esm.sh/preact@10.19.2",
-          "preact/": "https://esm.sh/preact@10.19.2/",
-          "htm/preact": "https://esm.sh/htm@3.1.1/preact?external=preact"
-        }
-      }
-    </script>
-
-    <script type="module">
-      import { render } from "preact";
-      import { useReducer } from "preact/hooks";
-      import { html } from "htm/preact";
-
-      export const DailySmiles = ({ daySmiles }) =>
-        daySmiles.map(
-          ([day, smiles]) =>
-            html`
-              <div>
-                <div>${day}</div>
-                <ul>
-                  ${smiles.map((smile) => html`<li>${smile}</li>`)}
-                </ul>
-              </div>
-            `
-        );
-
-      render(
-        html`
-          <${DailySmiles}
-            daySmiles=${[
-              [
-                "6/jun/24",
-                [
-                  "Ver uma série divertida.",
-                  "Piadocas bem feitas e no momento certo.",
-                ],
-              ],
-              [
-                "5/jun/24",
-                [
-                  "Cheiro de café quentinho.",
-                  "Miado de gato bebê.",
-                  "Ronronado de gatinhos quando você faz carinho.",
-                ],
-              ],
-            ]}
-          />
-        `,
-        document.getElementById("app")
-      );
-    </script>
-
-    <!-- <div id="app"></div>
-    <script prerender type="module" src="/src/index.jsx"></script> -->
+    <div id="app"></div>
+    <script prerender type="module" src="/src/index.jsx"></script>
   </body>
 </html>
