--- a/index.html
+++ b/index.html
@@ -78,6 +78,7 @@
                 [
                   "Ver uma série divertida.",
                   "Piadocas bem feitas e no momento certo.",
+                  "A água quente tocando no corpo ao ligar o chuveiro em um dia frio.",
                 ],
               ],
               [
