--- a/index.html
+++ b/index.html
@@ -2,13 +2,12 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <!-- <link rel="icon" type="image/svg+xml" href="/vite.svg" /> -->
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="color-scheme" content="light dark" />
     <title>Sorriso do Dia</title>
-    <link href="styles.css" rel="stylesheet" />
   </head>
-  <body class="theme-a adaptive">
+  <body>
     <div id="app"></div>
     <script prerender type="module" src="/src/index.jsx"></script>
   </body>
