--- a/index.html
+++ b/index.html
@@ -4,10 +4,9 @@
     <meta charset="utf-8" />
     <!-- <link rel="icon" type="image/svg+xml" href="/vite.svg" /> -->
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta name="color-scheme" content="light dark" />
     <title>Sorriso do Dia</title>
   </head>
-  <body>
+  <body data-theme="dracula">
     <div id="app"></div>
     <script prerender type="module" src="/src/index.jsx"></script>
   </body>
