--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>Sorriso do Dia</title>
   </head>
-  <body data-theme="dracula">
+  <body data-theme="light">
     <div id="app"></div>
     <script prerender type="module" src="/src/index.jsx"></script>
   </body>
