Add meta description to index.html for improved SEO

--- a/index.html
+++ b/index.html
@@ -4,6 +4,10 @@
     <meta charset="utf-8" />
     <link rel="icon" type="image/svg+xml" href="/src/assets/emoji-smile.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <meta
+      name="description"
+      content="A page that displays a list of reasons for you to smile, with a new reason (almost) every day."
+    />
     <title>Sorriso do Dia</title>
   </head>
   <body data-theme="light">
